logs/dag_id=etl_22024-08-21/run_id=scheduled__2024-08-03T00:00:00+00:00/task_id=final_etl_processing/attempt=1.log
[2024-08-21T06:27:11.288+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-08-21T06:27:11.525+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-03T00:00:00+00:00 [queued]>
[2024-08-21T06:27:11.578+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-03T00:00:00+00:00 [queued]>
[2024-08-21T06:27:11.587+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-08-21T06:27:11.684+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): final_etl_processing> on 2024-08-03 00:00:00+00:00
[2024-08-21T06:27:11.716+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=4337) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-08-21T06:27:11.722+0000] {standard_task_runner.py:63} INFO - Started process 4360 to run task
[2024-08-21T06:27:11.713+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl_22024-08-21', 'final_etl_processing', 'scheduled__2024-08-03T00:00:00+00:00', '--job-id', '714', '--raw', '--subdir', 'DAGS_FOLDER/final_etl.py', '--cfg-path', '/tmp/tmpg27kx3fi']
[2024-08-21T06:27:11.732+0000] {standard_task_runner.py:91} INFO - Job 714: Subtask final_etl_processing
[2024-08-21T06:27:12.178+0000] {task_command.py:426} INFO - Running <TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-03T00:00:00+00:00 [running]> on host 7e1333882d71
[2024-08-21T06:27:13.209+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='etl_22024-08-21' AIRFLOW_CTX_TASK_ID='final_etl_processing' AIRFLOW_CTX_EXECUTION_DATE='2024-08-03T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-08-03T00:00:00+00:00'
[2024-08-21T06:27:13.214+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-08-21T06:27:13.281+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2024-08-21T06:27:13.286+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', "python3 /opt/***/data/etl_m12.py --connection postgresql+psycopg2://***:***@postgres/postgres --csv ''"]
[2024-08-21T06:27:13.312+0000] {subprocess.py:86} INFO - Output:
[2024-08-21T06:27:13.480+0000] {subprocess.py:93} INFO -   File "/opt/***/data/etl_m12.py", line 155
[2024-08-21T06:27:13.486+0000] {subprocess.py:93} INFO -     # main(args.csv, args.connection)
[2024-08-21T06:27:13.491+0000] {subprocess.py:93} INFO - IndentationError: expected an indented block after 'if' statement on line 147
[2024-08-21T06:27:13.492+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2024-08-21T06:27:13.496+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-08-21T06:27:13.534+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2024-08-21T06:27:13.555+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_22024-08-21, task_id=final_etl_processing, run_id=scheduled__2024-08-03T00:00:00+00:00, execution_date=20240803T000000, start_date=20240821T062711, end_date=20240821T062713
[2024-08-21T06:27:13.592+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 714 for task final_etl_processing (Bash command failed. The command returned a non-zero exit code 1.; 4360)
[2024-08-21T06:27:13.637+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-08-21T06:27:13.685+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
